--- a/client/views/posts/post_item.jade
+++ b/client/views/posts/post_item.jade
@@ -4,4 +4,7 @@ template(name='postItem')
       h3: a(href=url)
         = title
         span= domain
+      p submitted by #{author}
+        if ownPost
+          a(href="{{pathFor 'postEdit'}}") Edit
     a.discuss.btn(href="{{pathFor 'postPage'}}") Discuss
